--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=crm
+DB_USERNAME=root
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -24,11 +24,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=smtp.qq.com
+MAIL_PORT=25
+MAIL_USERNAME=1791480030@qq.com
+MAIL_PASSWORD=zwywmxrkudorhhid
 MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=1791480030@qq.com
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
